# scitex-nn

./: .jupyter_ystore.db  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-nn-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
GITIGNORED/: HANDOFF.md
docs/sphinx/: conf.py  index.rst
examples/: 00_run_all.sh  01_axiswise_dropout.ipynb  01_hilbert.py  02_axiswise_dropout.py  02_channel_aug.ipynb  02_mnet_classifier.py  03_channel_aug.py  03_gaussian_filter.ipynb  04_filter_bank.ipynb  04_gaussian_filter.py  05_filter_bank.py  05_psd.ipynb  06_freq_gain_changer.ipynb  06_psd.py  06b_differentiable_bandpass.py  07_hilbert.ipynb  07_spectrogram.py  08_spectrogram.ipynb  08_wavelet.py  09_modulation_index.py  09_wavelet.ipynb  10_modulation_index.ipynb  10_pac.py  10b_pac_tour.ipynb  10b_pac_tour.py  11_pac.ipynb  11_spatial_attention.py  12_differentiable_bandpass.ipynb  12_resnet1d.py  13_freq_gain_changer.py  13_spatial_attention.ipynb  14_resnet1d.ipynb  14_tour.ipynb  14_tour.py  15_mnet1000.ipynb  15_mnet_classifier.py  16_bnet.ipynb  16_bnet.py  quickstart.py
examples/.ipynb_checkpoints/: 01_axiswise_dropout-checkpoint.ipynb  02_channel_aug-checkpoint.ipynb  03_gaussian_filter-checkpoint.ipynb  04_filter_bank-checkpoint.ipynb  05_psd-checkpoint.ipynb  06_freq_gain_changer-checkpoint.ipynb  07_hilbert-checkpoint.ipynb  08_spectrogram-checkpoint.ipynb  09_wavelet-checkpoint.ipynb  10_modulation_index-checkpoint.ipynb  11_pac-checkpoint.ipynb  12_differentiable_bandpass-checkpoint.ipynb  13_spatial_attention-checkpoint.ipynb  14_resnet1d-checkpoint.ipynb  15_mnet1000-checkpoint.ipynb  16_bnet-checkpoint.ipynb
src/scitex_nn/: _BNet.py  _BNet_Res.py  _DimHandler.py  _Filters.py  _FreqGainChanger.py  _Hilbert.py  _MNet_1000.py  _ModulationIndex.py  _PAC.py  _SpatialAttention.py  _Spectrogram.py  _SwapChannels.py  _Wavelet.py  __init__.py
src/scitex_nn/_aug/: _ChannelGainChanger.py  _DropoutChannels.py  __init__.py
tests/: conftest.py  test__FreqGainChanger.py
tests/develop/: test_audit.py
tests/examples/: test_01_axiswise_dropout.py  test_01_hilbert.py  test_02_axiswise_dropout.py  test_02_channel_aug.py  test_02_mnet_classifier.py  test_03_channel_aug.py  test_03_gaussian_filter.py  test_04_filter_bank.py  test_04_gaussian_filter.py  test_05_filter_bank.py  test_05_psd.py  test_06_freq_gain_changer.py  test_06_psd.py  test_06b_differentiable_bandpass.py  test_07_hilbert.py  test_07_spectrogram.py  test_08_spectrogram.py  test_08_wavelet.py  test_09_modulation_index.py  test_09_wavelet.py  test_10_modulation_index.py  test_10_pac.py  test_10b_pac_tour.py  test_11_pac.py  test_11_spatial_attention.py  test_12_differentiable_bandpass.py  test_12_resnet1d.py  test_13_freq_gain_changer.py  test_13_spatial_attention.py  test_14_resnet1d.py  test_14_tour.py  test_15_mnet1000.py  test_15_mnet_classifier.py  test_16_bnet.py  test_quickstart.py
tests/integration/: test_cross_package_imports.py
tests/scitex_nn/: test__BNet.py  test__BNet_Res.py  test__DimHandler.py  test__Filters.py  test__FreqGainChanger.py  test__Hilbert.py  test__MNet_1000.py  test__ModulationIndex.py  test__PAC.py  test__PSD.py  test__ResNet1D.py  test__SpatialAttention.py  test__Spectrogram.py  test__TransposeLayer.py  test__Wavelet.py
(+93 files in other folders)
